RESOLVED FIXED278192
element-render-blocking-033.html fails due to not matching emoji
https://bugs.webkit.org/show_bug.cgi?id=278192
Summary element-render-blocking-033.html fails due to not matching emoji
Matt Woodrow
Reported 2024-08-15 15:46:23 PDT
This test has an element with an emoji in the "id" attribute, and uses a <link rel=expect> to match it, using the percent syntax for the href. Matching doesn't succeed. I suspect this will require a change to `Document::findAnchor`.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-22 15:47:13 PDT
Tim Nguyen (:ntim)
Comment 2 2025-01-20 01:41:50 PST
This is the corresponding Chromium changeset: https://chromium-review.googlesource.com/c/chromium/src/+/5330569
Matt Woodrow
Comment 3 2025-01-20 15:30:51 PST
EWS
Comment 4 2025-01-21 00:50:17 PST
Committed 289174@main (e5b142d3f179): <https://commits.webkit.org/289174@main> Reviewed commits have been landed. Closing PR #39302 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.