element-render-blocking-033.html fails due to not matching emoji. https://bugs.webkit.org/show_bug.cgi?id=278192 <rdar://problem/134531921>

Reviewed by Tim Nguyen.

The 'selected the indicated part' algorithm
(https://html.spec.whatwg.org/multipage/browsing-the-web.html#select-the-indicated-part)
requires us to search with both the encoded and decoded fragment.

* LayoutTests/TestExpectations:
* Source/WebCore/html/HTMLLinkElement.cpp:
(WebCore::HTMLLinkElement::processInternalResourceLink):

Canonical link: https://commits.webkit.org/289174@main